# tankioapi

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: docs.yml  static.yml
.pages/: genindex.html  index.html  search.html  searchindex.js  usage.html
.pages/_sources/: index.md.txt  usage.md.txt
.pages/_sources/api/: core.md.txt  reference.md.txt
.pages/api/: api.html  core.html  exceptions.html  reference.html  types.html
docs/source/: conf.py  index.md
docs/source/api/: api.md  core.md  exceptions.md  types.md
docs/source/static/css/: main.css
docs/source/templates/: global_toc.html  layout.html
examples/: articles.py  test_server_info.py  top.py  user_info.py
requirements/: dev.txt  docs.txt  speedup.txt
src/toapi/: __init__.py  client.py  errors.py  http.py
src/toapi/data/: __init__.py  ranks.py  test_server.py
src/toapi/dataclasses/: game_object.py  mode.py  rank.py  rating.py  top.py  user.py
src/toapi/types/: __init__.py  article.py  esport.py  game_object.py  mode.py  rank.py  rating.py  status.py  top.py  user.py
